--- a/softwerkskammer/frontend/sass/agora.scss
+++ b/softwerkskammer/frontend/sass/agora.scss
@@ -2,6 +2,7 @@
 @import "../../../../node_modules/bootstrap/scss/bootstrap";
 @import "../../../../node_modules/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.scss";
 @import "../../../../node_modules/select2-theme-bootstrap4/src/select2-bootstrap.scss";
+@import "bootstrap-markdown-patched";
 
 // adapt syntaxhighlighted code in textboxes to bootstrap *BEGIN*
 .syntaxhighlighter a,
