--- a/softwerkskammer/frontend/sass/variables.scss
+++ b/softwerkskammer/frontend/sass/variables.scss
@@ -7,7 +7,7 @@ $theme-colors: (
 
 $font-family-sans-serif: "Source Sans Pro", Helvetica, Arial, sans-serif;
 $font-family-monospace: "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace;
-
+$font-family-icon: "Font Awesome 5 Free";
 $font-size-base: 1rem;
 
 $headings-font-weight: bold;
