--- a/softwerkskammer/lib/dashboard/views/index.pug
+++ b/softwerkskammer/lib/dashboard/views/index.pug
@@ -10,6 +10,10 @@ block scripts
 block title
   | Dashboard
 block content
+  #wikidialog.modal.fade(tabindex='-1')
+    .modal-dialog.modal-lg
+      .modal-content
+
   .page-header
     h2 #{t('dashboard.dashboard')}
       small
@@ -26,46 +30,42 @@ mixin my_groups
       .col-sm-4
         each group in groups
           -var panelid = group.id + '-grouppanel'
-          .panel.panel-default
-            .panel-heading(style='background-color: ' + group.color + '; color: #FFFFFF;')
+          .card.mb-2
+            h5.card-header(style='background-color: ' + group.color + '; color: #FFFFFF;')
               a.inherit-color.chevron(data-toggle='collapse', data-target='#' + panelid): b
                 i.fa.fa-toggle-down.fa-fw.blog
-              | &nbsp;#{group.longName}
-              a.inherit-color(href='/groups/' + group.id): span.pull-right: i.fa.fa-group.fa-fw.tooltipify(data-toggle='tooltip', title=t('groups.tooltip.gotogroup'))
-            .panel-body.collapse.in(id=panelid)
+                | &nbsp;#{group.longName}
+              a.inherit-color(href='/groups/' + group.id): span.float-right: i.fa.fa-group.fa-fw.tooltipify(data-toggle='tooltip', title=t('groups.tooltip.gotogroup'))
+            .card-body.collapse.show(id=panelid)
               +wikichangesOrBlogs(postsByGroup[group.id], panelid, 'blogs', t('wiki.blogposts'))
               +wikichangesOrBlogs(changesByGroup[group.id], panelid, 'changes', t('wiki.changes'))
 
 mixin my_activities
-  .panel.panel-default
-    .panel-heading
+  .card.mb-2
+    h5.card-header
       b #{t('dashboard.upcoming_activities')}
-    ul.list-group
+    ul.list-group.list-group-flush
       each activity in activities
         -var angemeldet = (member && activity.allRegisteredMembers().indexOf(member.id()) > -1)
-        li.list-group-item.clearfix
+        li.list-group-item
           if (angemeldet)
             i.fa.fa-check.fa-fw.text-success.tooltipify(data-toggle='tooltip', title=t('activities.tooltip.registered'))
           else
             i.fa.fa-question.fa-fw.tooltipify(data-toggle='tooltip', title=t('activities.tooltip.unknown'))
           | &nbsp; #{activity.startMoment().locale(language).format('L')} &nbsp;
           a(href=activity.fullyQualifiedUrl()) #{activity.title()}
-          span.pull-right(style='color: ' + activity.colorRGB +';') #{activity.groupName()}
+          a.float-right(href='/groups/' + activity.assignedGroup())
+            .badge.text-white(style='background-color: ' + activity.colorRGB) #{activity.groupName()}
 
 mixin wikichangesOrBlogs(items, panelid, prefix, title)
   if (items.length > 0)
-    h5
+    h5.card-title.my-2
       a.chevron(data-toggle='collapse', data-target='#' + panelid + ' .' + prefix)
         i.fa.fa-toggle-down.fa-fw.blog
-      | &nbsp;#{title}
-    div(class=prefix + ' collapse in')
-      ul.list-unstyled
-        each item in items
-          li
-            .modal.fade.bs-modal-lg(id=item.dialogId(), tabindex='-1')
-              .modal-dialog.modal-lg
-                .modal-content
-            a(data-toggle='modal', data-target='#' + item.dialogId(), href=item.dialogUrl()) #{item.pureName()}
-            small.pull-right #{item.date().locale(language).format('L')}&nbsp;
-              a(href=item.url()): i.fa.fa-book.fa-fw.tooltipify(data-toggle='tooltip', title=t('wiki.tooltip.gotopage'))
-    hr
+        | &nbsp;#{title}
+    ul.list-group.list-group-flush(class=prefix + ' collapse show')
+      each item in items
+        li.list-group-item.py-0
+          a.modaldialog(data-toggle='modal', data-target='#wikidialog', data-link=item.dialogUrl(), href='#') #{item.pureName()}
+          small.float-right #{item.date().locale(language).format('L')}&nbsp;
+            a(href=item.url()): i.fa.fa-book.fa-fw.tooltipify(data-toggle='tooltip', title=t('wiki.tooltip.gotopage'))
