--- a/softwerkskammer/lib/wiki/views/edit.pug
+++ b/softwerkskammer/lib/wiki/views/edit.pug
@@ -10,7 +10,7 @@ block content
     +csrf
     fieldset
       .row
-        .col-md-12
+        .col-12
           +submitButtons('general.save')
           legend
             -var params = {pageName: pageName, subdir: subdir}
