--- a/softwerkskammer/lib/activities/views/activities-mixins.pug
+++ b/softwerkskammer/lib/activities/views/activities-mixins.pug
@@ -14,9 +14,9 @@ mixin activityList(activities, member)
     for activity in activities
       dt.col-4
         | #{activity.startMoment().locale(language).format('LL')}
-      dd.col-8
+      dd.col-8.mb-0
         a(href='/groups/' + activity.assignedGroup())
-          .badge(style='background-color: ' + activity.colorRGB).text-white #{activity.groupName()}
+          .badge.text-white(style='background-color: ' + activity.colorRGB) #{activity.groupName()}
         | &nbsp;
         a(href=activity.fullyQualifiedUrl()) #{activity.title()}
         if (member && activity.allRegisteredMembers().indexOf(member.id()) > -1)
