--- a/softwerkskammer/lib/groups/views/group-mixins.pug
+++ b/softwerkskammer/lib/groups/views/group-mixins.pug
@@ -3,7 +3,7 @@ mixin grouplist(title, groupsOfAKind)
   ul.list-unstyled
     each group in groupsOfAKind
       li
-        span.label(style='background-color: ' + group.color + '; min-width:32px; text-align:right; display:inline-block') #{group.membercount}
+        span.badge.text-white(style='background-color: ' + group.color + '; min-width:32px; text-align:right; display:inline-block') #{group.membercount}
         | &nbsp;&nbsp;
         span.popover-highlight(rel='tooltip-in-body', data-content=group.descriptionHTMLFiltered('img'))
           strong: a(href=group.id) #{group.longName}
@@ -15,6 +15,6 @@ mixin grouplist(title, groupsOfAKind)
 mixin placeGroupLabels(groupsOfAKind)
   each group in groupsOfAKind
     if (group.mapX && group.mapY && group.shortName)
-      .label.group(style='background-color: ' +group.color + '; top: ' + group.mapYrelative() + '%; left: ' + group.mapXrelative() + '%;')
+      .badge.group.position-absolute(style='background-color: ' +group.color + '; top: ' + group.mapYrelative() + '%; left: ' + group.mapXrelative() + '%;')
         span(rel='tooltip-in-body', data-title='<h4>' + group.longName + '</h4>', data-content=group.descriptionHTMLFiltered('img'))
           a.group(href='/groups/' + group.id) #{group.shortName}
