--- a/softwerkskammer/lib/members/views/index.pug
+++ b/softwerkskammer/lib/members/views/index.pug
@@ -6,11 +6,11 @@ block title
 
 block content
   .page-header
-    h2 #{t('members.members')}
+    h1 #{t('members.members')}
   .row
-    .col-md-6.col-md-push-6
+    .col-md-6.order-md-last
       +tagCloud
-    .col-md-6.col-md-pull-6
+    .col-md-6.order-md-first 
       +memberlistHeading(t('members.has'), members.length)
       +memberlist(members)
 
