--- a/softwerkskammer/lib/members/views/indexForTag.pug
+++ b/softwerkskammer/lib/members/views/indexForTag.pug
@@ -9,9 +9,9 @@ block content
     h2 #{t('members.members')}&nbsp;
       small #{interest}
   .row
-    .col-md-6.col-md-push-6
+    .col-md-6.order-md-last
       +tagCloud
-    .col-md-6.col-md-pull-6
+    .col-md-6.order-md-first
       +memberlistHeading(t('members.has_by_interests'), members.length)
       +memberlist(members)
 
