bs4 considered done

--- a/softwerkskammer/lib/mailsender/views/compose-resign.pug
+++ b/softwerkskammer/lib/mailsender/views/compose-resign.pug
@@ -9,9 +9,9 @@ block content
   form#mailform(action='/mailsender/resign', method='post')
     fieldset
       .row
-        .col-md-12
-          .btn-group.pull-right
-            a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
+        .col-12
+          .btn-group.float-right
+            a.btn.btn-light(href='javascript:history.back()', type='cancel') #{t('general.back')}
             -var deleteoptions = {url: '/mailsender/resign', params: {nickname: nickname}}
             +reallyDeleteModalPost('members.delete', deleteoptions)
           legend
@@ -19,8 +19,8 @@ block content
           !=t('mailsender.resign_info', { postProcess: 'pug' })
           +textareaPure('why', t('mailsender.why-resign'), why)
           +textareaPure('notes', t('mailsender.notes-resign'), notes)
-          .btn-group.pull-right
-            a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
+          .btn-group.float-right
+            a.btn.btn-light(href='javascript:history.back()', type='cancel') #{t('general.back')}
             -var deleteoptions = {url: '/mailsender/resign', params: {nickname: nickname}}
             +reallyDeleteModalPost('members.delete', deleteoptions)
           
