bs4: tweaking the layout

--- a/commonComponents/pug/imageUpload.pug
+++ b/commonComponents/pug/imageUpload.pug
@@ -6,7 +6,7 @@ mixin selectFileButton(label, extraclasses)
 
 mixin uploadButtons(btnGroupClasses)
   .btn-group(class=btnGroupClasses)
-    span#btn-cancel.btn.btn-default #{t('general.cancel')}
+    span#btn-cancel.btn.btn-light #{t('general.cancel')}
     button.btn.btn-primary(type='submit') #{t('general.save')}
 
 mixin imageScripts
