--- a/softwerkskammer/views/commonLayout.pug
+++ b/softwerkskammer/views/commonLayout.pug
@@ -47,7 +47,7 @@ html
       p.d-none.d-print-block &nbsp;
       nav.navbar.navbar-expand-sm.p-0.navbar-light.bg-light.fixed-top.d-none.d-sm-flex.d-print-none(role='navigation')
         +topNavbar
-      nav.navbar.pl-0.pt-0.navbar-light.bg-light.sticky-top.d-sm-none.d-block(role='navigation')
+      nav.navbar.py-0.navbar-light.bg-light.sticky-top.d-sm-none.d-flex(role='navigation')
         +topNavbar('xs')
       .container-fluid.p-0.p-md-auto
         .row.main
