--- a/softwerkskammer/views/layoutComponents.pug
+++ b/softwerkskammer/views/layoutComponents.pug
@@ -1,6 +1,6 @@
 mixin administrationMenu
   if (accessrights.isSuperuser())
-    ul.navbar-nav.ml-md-auto.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior="true")
+    ul.navbar-nav.ml-md-auto.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
       li.nav-item.dropdown(data-agoranav='administration')
         a.nav-link.dropdown-toggle(href='#')
           i.fa.fa-dashboard.fa-fw
@@ -67,7 +67,7 @@ mixin languageEntry(forInline, lang, title, img)
 
 mixin navbar-inside
   .navbar.navbar-collapse
-    ul.nav.navbar-nav.md-auto.d-flex.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior="true")
+    ul.nav.navbar-nav.md-auto.d-flex.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
       li.nav-item(data-agoranav='impressum'): a.nav-link(href='/impressum.html') #{t('general.legal_notice')}
       li.nav-item(data-agoranav='wiki/hilfe'): a.nav-link(href='/help.html') #{t('general.faq')}
       li.nav-item: a.nav-link(href='/credits.html') #{t('general.credits')}
@@ -95,7 +95,7 @@ mixin topNavbar(xs)
     i.fa.fa-bars.fa-lg
 
   .navbar-collapse.collapse.collapse-top.align-self-end
-    ul.nav.navbar-nav(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior="true")
+    ul.nav.navbar-nav(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
       li.nav-item(data-agoranav='dashboard'): a.nav-link(href='/dashboard')
         i.fa.fa-th-list.fa-fw
         span.d-sm-none.d-md-inline &nbsp;#{t('dashboard.dashboard')}
@@ -126,6 +126,6 @@ mixin topNavbar(xs)
           i.fa.fa-user.fa-fw
           span.d-sm-none.d-md-inline &nbsp;#{t('members.members')}
       +loginMenu(true)
-    ul.navbar-nav.ml-md-auto.d-none.d-md-flex.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior="true")
+    ul.navbar-nav.ml-md-auto.d-none.d-md-flex.mr-3(data-sm-options='{ hideOnClick: false }', data-sm-skip-collapsible-behavior=true)
       +loginMenu
 
