global replace of 'pull-right' by 'float-right'

--- a/commonComponents/pug/imageUpload.pug
+++ b/commonComponents/pug/imageUpload.pug
@@ -42,7 +42,7 @@ mixin imageUpload
   #selectFileButton
     +selectFileButton('general.photo')
   #uploadButtons
-    +uploadButtons(['pull-right'])
+    +uploadButtons(['float-right'])
   .clearfix
   #previewContainer
     div
