--- a/softwerkskammer/lib/activityresults/views/get.pug
+++ b/softwerkskammer/lib/activityresults/views/get.pug
@@ -17,7 +17,7 @@ block content
     .row
       .col-xs-12
         .page-header
-          .pull-right
+          .float-right
             form#recordForm(role='form', method='POST', action='/activityresults/' + encodeURIComponent(activityResult.id()) + '/upload' + '?_csrf=' + encodeURIComponent(csrf_token), enctype='multipart/form-data')
               +imageUpload
           h1 #{activityResult.id()}
@@ -35,7 +35,7 @@ block content
                     span(style='display:inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; max-width: 70%;') #{photo.title()}
                     if (accessrights.canEditPhoto(photo))
                       span &nbsp;
-                        a.pull-right(href='/activityresults/' + activityResult.id() + '/photo/' + photo.id() + '/edit', title=t('general.edit'))
+                        a.float-right(href='/activityresults/' + activityResult.id() + '/photo/' + photo.id() + '/edit', title=t('general.edit'))
                           i.fa.fa-fw.fa-edit
-                    span.pull-right #{photo.time().locale(language).format('LT')}
+                    span.float-right #{photo.time().locale(language).format('LT')}
       hr
