--- a/softwerkskammer/lib/site/views/superuserRightsRequired.pug
+++ b/softwerkskammer/lib/site/views/superuserRightsRequired.pug
@@ -10,7 +10,7 @@ block content
       p Sollte dies ein Fehler in der Anwendung sein, bitten wir um 
         a(href='https://github.com/softwerkskammer/Agora/issues/') Rückmeldung.
       p Das Agora-Team bittet um Entschuldigung.
-      p: a.btn.pull-right.btn-primary(href='javascript:history.back()') Zurück
+      p: a.btn.float-right.btn-primary(href='javascript:history.back()') Zurück
     .col-lg-6
       h3 Information
       p Die geschützte Seite war: <br> 
