--- a/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
+++ b/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
@@ -6,7 +6,7 @@ block content
   .row
     .col-xs-12
       .page-header
-        .btn-group.pull-right
+        .btn-group.float-right
           a.btn.btn-default(href='../alle/europaweite-veranstaltungen-' + year, title=t('wiki.as_table'))
             i.fa.fa-table.fa-fw
             | &nbsp;#{t('wiki.as_table')}
