wiki events by year page

--- a/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
+++ b/softwerkskammer/lib/wiki/views/eventsWithCalendars.pug
@@ -4,10 +4,10 @@ block title
   | #{t('general.events_in_europe')}
 block content
   .row
-    .col-xs-12
+    .col-12
       .page-header
         .btn-group.float-right
-          a.btn.btn-default(href='../alle/europaweite-veranstaltungen-' + year, title=t('wiki.as_table'))
+          a.btn.btn-light(href='../alle/europaweite-veranstaltungen-' + year, title=t('wiki.as_table'))
             i.fa.fa-table.fa-fw
             | &nbsp;#{t('wiki.as_table')}
         h2 #{t('general.events_in_europe')} #{year}
